# kaggle-dev

./: .gitignore  README.md  create_table.sql  extract_features.py  import_csv.py  mobilesam-tests.ipynb  normalize.py  pyproject.toml  server.py  sherds.db
templates/: index.html
